# XelTufty

./: .gitignore  CMakeLists.txt  tufty-xel.cpp
drivers/: CMakeLists.txt
drivers/st7789/: CMakeLists.txt
external_tools/image_to_c/: bearIcon100x100.h  image_to_c
include/: utilities.hpp
include/images/: bearIcon200x200.h  bearIconPng.h  bearIconPngSmall.h  icon200x200Rounded.h  icon240x240.h
include/layers/: bearPawBackgroundLayer.hpp  imageLayer.hpp  layer.hpp  shapesDemoLayer.hpp  textLayer.hpp
include/scenes/: sonaScene.hpp
libraries/: CMakeLists.txt
libraries/bitmap_fonts/: CMakeLists.txt
libraries/hershey_fonts/: CMakeLists.txt
libraries/pico_graphics/: CMakeLists.txt  pico_graphics.hpp  pico_graphics_pen_rgb332.cpp
libraries/pngdec/: CMakeLists.txt  PNGdec.h  png.inl
libraries/tufty2040/: CMakeLists.txt  tufty2040.cpp  tufty2040.hpp
libraries/xel-present/: CMakeLists.txt  layer.hpp  scene.hpp  sceneManager.cpp  sceneManager.hpp
src/: bearPawBackgroundLayer.cpp  imageLayer.cpp  shapesDemoLayer.cpp
src/layers/: bearPawBackgroundLayer.cpp  imageLayer.cpp  shapesDemoLayer.cpp  textLayer.cpp
src/scenes/: sonaScene.cpp
